1. 流失入库缓冲程序更新